--- a/src/NerdStote.Catalogo.Domain/NerdStote.Catalogo.Domain.csproj
+++ b/src/NerdStote.Catalogo.Domain/NerdStote.Catalogo.Domain.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.35">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
