--- a/src/NerdStore.WebApp.MVC/NerdStore.WebApp.MVC.csproj
+++ b/src/NerdStore.WebApp.MVC/NerdStore.WebApp.MVC.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\NerdStote.Catalogo.Domain\NerdStote.Catalogo.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
