--- a/src/NerdStore.WebApp.MVC/NerdStore.WebApp.MVC.csproj
+++ b/src/NerdStore.WebApp.MVC/NerdStore.WebApp.MVC.csproj
@@ -24,6 +24,8 @@
     <ProjectReference Include="..\NerdStore.Catalogo.Application\NerdStore.Catalogo.Application.csproj" />
     <ProjectReference Include="..\NerdStore.Catalogo.Data\NerdStore.Catalogo.Data.csproj" />
     <ProjectReference Include="..\NerdStore.Core\NerdStore.Core.csproj" />
+    <ProjectReference Include="..\NerdStore.Vendas.Data\NerdStore.Vendas.Data.csproj" />
+    <ProjectReference Include="..\NerdStore.Vendas.Domain\NerdStore.Vendas.Domain.csproj" />
     <ProjectReference Include="..\NerdStores.Vendas.Application\NerdStore.Vendas.Application.csproj" />
     <ProjectReference Include="..\NerdStote.Catalogo.Domain\NerdStote.Catalogo.Domain.csproj" />
   </ItemGroup>
