--- a/src/NerdStores.Vendas.Application/NerdStore.Vendas.Application.csproj
+++ b/src/NerdStores.Vendas.Application/NerdStore.Vendas.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NerdStore.Core\NerdStore.Core.csproj" />
+    <ProjectReference Include="..\NerdStore.Vendas.Domain\NerdStore.Vendas.Domain.csproj" />
   </ItemGroup>
 
 </Project>
